--- a/iTunesSearch-Example/Storyboards/Base.lproj/Main.storyboard
+++ b/iTunesSearch-Example/Storyboards/Base.lproj/Main.storyboard
@@ -35,9 +35,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="c66-6Z-dK5">
-                                <rect key="frame" x="169.5" y="315" width="37" height="37"/>
-                            </activityIndicatorView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pa3-FV-4Ma">
                                 <rect key="frame" x="0.0" y="120" width="375" height="547"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -50,22 +47,22 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="0iK-Cr-lmp">
-                                                    <rect key="frame" x="0.0" y="8" width="0.0" height="73.5"/>
+                                                    <rect key="frame" x="74" y="8" width="293" height="73.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Track" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mnz-nL-eaY">
-                                                            <rect key="frame" x="0.0" y="0.0" width="0.0" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="293" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Product name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J1q-8l-Erg">
-                                                            <rect key="frame" x="0.0" y="20.5" width="0.0" height="17"/>
+                                                            <rect key="frame" x="0.0" y="20.5" width="293" height="17"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalCompressionResistancePriority="751" text="Price" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NfJ-wM-lT0">
-                                                            <rect key="frame" x="0.0" y="37.5" width="0.0" height="36"/>
+                                                            <rect key="frame" x="0.0" y="37.5" width="293" height="36"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                                             <color key="textColor" red="0.062745098040000002" green="0.62352941179999999" blue="0.84313725490000002" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -73,7 +70,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-artwork-placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="TNb-Ey-Bf1">
-                                                    <rect key="frame" x="0.0" y="20" width="50" height="50"/>
+                                                    <rect key="frame" x="16" y="20" width="50" height="50"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="TNb-Ey-Bf1" secondAttribute="height" multiplier="1:1" id="Fcx-9E-BJJ"/>
                                                         <constraint firstAttribute="width" constant="50" id="bV0-an-8qo"/>
@@ -94,7 +91,7 @@
                                             <outlet property="previewImageView" destination="TNb-Ey-Bf1" id="6JU-5l-mFF"/>
                                             <outlet property="priceLabel" destination="NfJ-wM-lT0" id="jJC-jA-n5h"/>
                                             <outlet property="trackLabel" destination="mnz-nL-eaY" id="pOg-tF-wkX"/>
-                                            <segue destination="lUL-KR-ker" kind="show" id="QJd-WB-qmn"/>
+                                            <segue destination="lUL-KR-ker" kind="show" identifier="SearchResultSegue" id="QJd-WB-qmn"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -113,8 +110,11 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="oM9-br-Fcv"/>
                                 </connections>
                             </searchBar>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="c66-6Z-dK5">
+                                <rect key="frame" x="177" y="324" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="CZa-rP-yQ8" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="5TY-MS-7Tj"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="pa3-FV-4Ma" secondAttribute="bottom" id="CTV-I7-3GZ"/>
@@ -155,9 +155,34 @@
                     <view key="view" contentMode="scaleToFill" id="1Zj-nB-5i7">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="shf-q6-oPO">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="d67-q7-2V2">
+                                <rect key="frame" x="178" y="324" width="20" height="20"/>
+                            </activityIndicatorView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="shf-q6-oPO" firstAttribute="top" secondItem="WQW-1q-fIp" secondAttribute="top" id="MIz-Ui-9R3"/>
+                            <constraint firstItem="d67-q7-2V2" firstAttribute="centerY" secondItem="1Zj-nB-5i7" secondAttribute="centerY" id="PSM-HK-gzt"/>
+                            <constraint firstItem="WQW-1q-fIp" firstAttribute="trailing" secondItem="shf-q6-oPO" secondAttribute="trailing" id="Pkh-G2-ntE"/>
+                            <constraint firstItem="WQW-1q-fIp" firstAttribute="bottom" secondItem="shf-q6-oPO" secondAttribute="bottom" id="QuN-NG-nGv"/>
+                            <constraint firstItem="d67-q7-2V2" firstAttribute="centerX" secondItem="1Zj-nB-5i7" secondAttribute="centerX" id="mZh-Lt-GUM"/>
+                            <constraint firstItem="shf-q6-oPO" firstAttribute="leading" secondItem="WQW-1q-fIp" secondAttribute="leading" id="pQr-2m-A7S"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="WQW-1q-fIp"/>
                     </view>
+                    <connections>
+                        <outlet property="loadingActivityIndicator" destination="d67-q7-2V2" id="U1E-5l-hU2"/>
+                        <outlet property="webView" destination="shf-q6-oPO" id="mf0-Vy-80J"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="31o-Yz-lZ7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
